Add admin page for our team

--- a/custAdmin/templates/custAdmin/home.html
+++ b/custAdmin/templates/custAdmin/home.html
@@ -7,6 +7,9 @@
                 <a href="/admin/home">Home</a>
             </li>
             <li>
+                <a href="/admin/about_us">About Us</a>
+            </li>
+            <li>
                 <a href="/admin/golf">People</a>
             </li>
             <li>
