--- a/custAdmin/templates/custAdmin/home.html
+++ b/custAdmin/templates/custAdmin/home.html
@@ -10,7 +10,7 @@
                 <a href="/admin/about_us">About Us</a>
             </li>
             <li>
-                <a href="/admin/golf">People</a>
+                <a href="/admin/people">People</a>
             </li>
             <li>
                 <a href="/admin/golf">Golf Outings </a>
