Download golfer data

--- a/custAdmin/templates/custAdmin/home.html
+++ b/custAdmin/templates/custAdmin/home.html
@@ -15,6 +15,9 @@
             <li>
                 <a href="/admin/golf">Golf Outings </a>
             </li>
+            <li>
+                <a href="/admin/golf_registration">Download Golf Registration Data </a>
+            </li>
         </ul>
     </div>
     
