--- a/src/templates/src/base.html
+++ b/src/templates/src/base.html
@@ -36,17 +36,8 @@
     <div class="wrapper" style="min-height: 100%; margin-bottom: -50px;">
 
       <!--Navbar -->
-      <!-- TODO put this in external file somehow -->
-      <!-- TODO make larger text the picture from the other site D3373E-->
       <nav class="mb-1 navbar navbar-expand-lg navbar-dark lighten-1 yellow_background darkgrey_bottom_border mx-auto" style="align-items: center;">
 
-        <!--<a class="navbar-brand" >UC Runnig Club</a>-->
-        <!-- <a href="/home"><img src="/static/UCRunningClubLogo.png"> </a> -->
-
-        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-555"
-          aria-controls="navbarSupportedContent-555" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button> -->
 
         <div id="navbarSupportedContent-555" style="width: 100%;">
           <ul class="navbar-nav mr-auto">
@@ -55,7 +46,7 @@
             {% else %} <li class="nav-item" style="margin: auto;">
             {% endif %}
               <a class="nav-link  primary_text" href="/">Home
-                <span class="sr-only">(current)</span>
+                <!-- <span class="sr-only">(current)</span> -->
               </a>
             </li>
 
@@ -92,14 +83,9 @@
               </div>
             </li>
           </ul>
-          <ul class="navbar-nav ml-auto nav-flex-icons">
-            <!--<li class="nav-item avatar">
-              <a class="nav-link p-0" href="#">
-                <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-5.jpg" class="rounded-circle z-depth-0"
-                  alt="avatar image" height="35">
-              </a>
-            </li>-->
-          </ul>
+          <!-- <ul class="navbar-nav ml-auto nav-flex-icons">
+            
+          </ul> -->
         </div>
       </nav>
       <!--/.Navbar -->
@@ -117,16 +103,16 @@
     <div class="push" style="height:50px;"></div>
   </div>
   <br><br>
-    <footer class="footer" style="background: #000000;height:75px; border-top: 5px solid #DD0000;">
-<br>
-      <div class="container">
-        <div class="row justify-content-center">
+  <footer class="footer yellow_background darkgrey_top_border" style="height:75px; border-top: 5px solid #595959;">
+    <br>
+    <div class="container">
+      <div class="row justify-content-center">
 
-          <!--<hr style="margin-top: 0.5em;margin-bottom: 0.5em; margin-left: auto;    margin-right: auto;    border-style: inset;    border-width: 1px;border-color:red; width: 100%">-->
-          <span class="text-muted"> Designed by Jake Carlson (2019) ||  JakeCarlson00@gmail.com</span>
-        </div>
+        <!--<hr style="margin-top: 0.5em;margin-bottom: 0.5em; margin-left: auto;    margin-right: auto;    border-style: inset;    border-width: 1px;border-color:red; width: 100%">-->
+        <!-- <span class="text-muted"> Designed by Jake Carlson (2019) ||  JakeCarlson00@gmail.com</span> -->
       </div>
-    </footer>
+    </div>
+  </footer>
 
   </body>
 </html>
