--- a/media/stylesheets/base.css
+++ b/media/stylesheets/base.css
@@ -14,6 +14,10 @@
   min-height: 90px;
   border-bottom: 5px solid #595959; }
 
+.darkgrey_top_border {
+  min-height: 90px;
+  border-top: 5px solid #595959; }
+
 .center_text {
   text-align: center !important;
   width: 100% !important; }
